name:                Maze
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/ford-prefect/Maze#readme
license:             LGPL3
license-file:        LICENSE
author:              Arun Raghavan
maintainer:          mail@arunraghavan.net
copyright:           2016 Arun Raghavan
category:            App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       random
  default-language:    Haskell2010

executable Maze.exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , random
                     , Maze
  default-language:    Haskell2010

test-suite Maze-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Maze
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ford-prefect/Maze
